log/build_2024-11-11_21-42-21/motor_controller/stderr.log
  File "/home/csanimatronics/CS_Animatronics/install/motor_controller/lib/python3.12/site-packages/motor_controller/motor_controller.py", line 56
    self.get_logger().info(f'Angles: {msg.angles}'}
                                                  ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('

